# Granger-Causality

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example_conditional.py  example_unconditional.py
grangerspy/: __init__.py  _utils.py  conditional.py  unconditional.py
